<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="50dp"
    app:cardCornerRadius="13dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textColor="#242021"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_two"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="36dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_alert"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_two"
            app:layout_constraintBottom_toBottomOf="parent">



            <TextView
                android:id="@+id/btn_yes_dialog_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingVertical="20dp"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <View
                android:id="@+id/view_three"
                android:layout_width="2dp"
                android:layout_height="60dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/btn_no_dialog_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingVertical="20dp"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>






    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>